--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <img class="svg" src="./icons/close.svg" alt="" />
                     <p class="semi-bold input-box-close">CANCEL</p>
                   </div>
-                  <div class="li">
+                  <div class="li add-transcation-save-btn">
                     <img class="svg" src="icons/tick.svg" alt="" />
                     <p class="semi-bold">SAVE</p>
                   </div>
@@ -133,7 +133,7 @@
                 <div class="sub-head-two">
                   <div class="account-body">
                     <p class="change-font-style">Account</p>
-                    <div class="child-body">
+                    <div class="child-body" data-id="7876543310">
                       <p class="semi-bold">Account</p>
                       <img
                         style="filter: invert(1)"
@@ -145,7 +145,7 @@
                   </div>
                   <div class="category-body">
                     <p class="change-font-style">Category</p>
-                    <div class="child-body">
+                    <div class="child-body" data-id="2876543210">
                       <p class="semi-bold">Category</p>
                       <img
                         style="filter: invert(1)"
@@ -214,6 +214,18 @@
                     <small>Watch</small>
                   </li>
                 </ul>
+              </div>
+              <!-- Tostal -->
+              <div class="success-tostal">
+                <div class="x-icon">
+                  <div class="bar-1"></div>
+                  <div class="bar-2"></div>
+                </div>
+                <div class="message-box">
+                  <p class="message">Error</p>
+                  <p class="text">Select the requierd fields</p>
+                </div>
+                <div class="success-line"></div>
               </div>
             </div>
           </div>
