--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                   </div>
                 </div>
                 <div class="notes-box">
-                  <textarea name="" id="" placeholder="Add notes"></textarea>
+                  <textarea name="" id="description-notes" placeholder="Add notes"></textarea>
                 </div>
               </div>
               <div class="main-input-box">
