--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <div class="detail-view-container">
                 <div class="card-top">
                   <div class="card-header">
-                    <img src="./icons/close.svg" alt="" />
+                    <img style="filter: invert(1);" src="./icons/close.svg" alt="" />
                     <div class="card-operations">
                       <img class="svg" src="./icons/delete.svg" alt="" />
                       <img class="svg" src="./icons/edit.svg" alt="" />
