--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                   <div class="card-header">
                     <img style="filter: invert(1);" src="./icons/close.svg" alt="" />
                     <div class="card-operations">
-                      <img class="svg" src="./icons/delete.svg" alt="" />
-                      <img class="svg" src="./icons/edit.svg" alt="" />
+                      <img class="svg delete-history" src="./icons/delete.svg" alt="" />
+                      <img class="svg edit-history" src="./icons/edit.svg" alt="" />
                     </div>
                   </div>
                   <div class="center-content">
