--- a/index.html
+++ b/index.html
@@ -48,10 +48,22 @@
               <div class="detail-view-container">
                 <div class="card-top">
                   <div class="card-header">
-                    <img style="filter: invert(1);" src="./icons/close.svg" alt="" />
+                    <img
+                      style="filter: invert(1)"
+                      src="./icons/close.svg"
+                      alt=""
+                    />
                     <div class="card-operations">
-                      <img class="svg delete-history" src="./icons/delete.svg" alt="" />
-                      <img class="svg edit-history" src="./icons/edit.svg" alt="" />
+                      <img
+                        class="svg delete-history"
+                        src="./icons/delete.svg"
+                        alt=""
+                      />
+                      <img
+                        class="svg edit-history"
+                        src="./icons/edit.svg"
+                        alt=""
+                      />
                     </div>
                   </div>
                   <div class="center-content">
@@ -157,7 +169,11 @@
                   </div>
                 </div>
                 <div class="notes-box">
-                  <textarea name="" id="description-notes" placeholder="Add notes"></textarea>
+                  <textarea
+                    name=""
+                    id="description-notes"
+                    placeholder="Add notes"
+                  ></textarea>
                 </div>
               </div>
               <div class="main-input-box">
@@ -893,35 +909,51 @@
         </nav>
       </footer>
       <div class="sidebar">
-        <img src="icons/close.svg" alt="" class="close" />
+        <img src="icons/close.svg" alt="" class="close" style="filter: invert(1);"/>
         <header>
           <img class="user-profile" src="images/men.png" alt="" />
           <h3>Hello Ganesh</h3>
         </header>
         <div class="settings">
           <ul>
-            <li>
+            <!-- <li>
               <img class="svg" src="icons/edit.svg" alt="" />
               <div class="info">
                 <p>Ganesh</p>
                 <small>Tap to edit username</small>
               </div>
+            </li> -->
+            <li>
+              <div class="left-part">
+                <img class="svg" src="icons/user.svg" alt="" />
+                <div class="info">
+                  <p>My account</p>
+                  <small>Veiw your account info</small>
+                </div>
+              </div>
+              <img class="arrow-right" src="./icons/arrowright.svg" alt="" />
             </li>
             <li class="theme">
-              <img class="svg" src="icons/sun.svg" alt="" />
-              <div class="info">
-                <p>Preference</p>
-                <small>Click to change theme</small>
+              <div class="left-part">
+                <img class="svg" src="icons/sun.svg" alt="" />
+                <div class="info">
+                  <p>Preference</p>
+                  <small>Click to change theme</small>
+                </div>
               </div>
+              <img class="arrow-right" src="./icons/arrowright.svg" alt="" />
             </li>
             <li class="view-mode">
-              <img class="svg" src="icons/fullscreen.svg" alt="" />
+              <div class="left-part">
+                <img class="svg" src="icons/fullscreen.svg" alt="" />
               <div class="info">
                 <p>Full Screen</p>
                 <small>For better user experience</small>
               </div>
+              </div>
+              <img class="arrow-right" src="./icons/arrowright.svg" alt="" />
             </li>
-            <li>
+            <!-- <li>
               <img class="svg" src="icons/reset.svg" alt="" />
               <div class="info">
                 <p>Reset</p>
@@ -941,15 +973,15 @@
                 <p>Delete</p>
                 <small>Delete everything</small>
               </div>
-            </li>
+            </li> -->
 
-            <li>
+            <!-- <li>
               <img class="svg" src="icons/arrrow.svg" alt="" />
               <div class="info">
                 <p>Privacy Policy</p>
                 <small>Know our privacy policy</small>
               </div>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
