--- a/index.html
+++ b/index.html
@@ -953,6 +953,36 @@
               </div>
               <img class="arrow-right" src="./icons/arrowright.svg" alt="" />
             </li>
+            <li class="rating-reviews">
+              <div class="left-part">
+                <img class="svg" src="icons/star.svg" alt="" />
+              <div class="info">
+                <p>Reviews Rating</p>
+                <small>For better user experience</small>
+              </div>
+              </div>
+              <img class="arrow-right" src="./icons/arrowright.svg" alt="" />
+            </li>
+            <li class="total-users">
+              <div class="left-part">
+                <img class="svg" src="icons/tusers.svg" alt="" />
+              <div class="info">
+                <p>Total Users</p>
+                <small>Penny Partner users</small>
+              </div>
+              </div>
+              <img class="arrow-right" src="./icons/arrowright.svg" alt="" />
+            </li>
+            <li class="invite-friends">
+              <div class="left-part">
+                <img class="svg" src="icons/share.svg" alt="" />
+              <div class="info">
+                <p>Invite Frineds</p>
+                <small>want to invite your friends & family</small>
+              </div>
+              </div>
+              <img class="arrow-right" src="./icons/arrowright.svg" alt="" />
+            </li>
             <!-- <li>
               <img class="svg" src="icons/reset.svg" alt="" />
               <div class="info">
