--- a/index.html
+++ b/index.html
@@ -912,7 +912,7 @@
         <img src="icons/close.svg" alt="" class="close" style="filter: invert(1);"/>
         <header>
           <img class="user-profile" src="images/men.png" alt="" />
-          <h3>Hello Ganesh</h3>
+          <h2>Hello Ganesh</h2>
         </header>
         <div class="settings">
           <ul>
@@ -978,7 +978,7 @@
                 <img class="svg" src="icons/share.svg" alt="" />
               <div class="info">
                 <p>Invite Frineds</p>
-                <small>want to invite your friends & family</small>
+                <small>Invite your friends & family</small>
               </div>
               </div>
               <img class="arrow-right" src="./icons/arrowright.svg" alt="" />
