--- a/index.html
+++ b/index.html
@@ -1124,6 +1124,9 @@
         </div>
   
         <ul class="user-feedback"></ul>
+        <div class="review-back-btn">
+          <img src="icons/return.svg" alt="">
+        </div>
       </div>
     </div>
 
