--- a/index.html
+++ b/index.html
@@ -10,14 +10,18 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="category.css" />
     <link rel="stylesheet" href="budget.css" />
-    <link rel="stylesheet" href="review.css">
+    <link rel="stylesheet" href="review.css" />
   </head>
+
   <body>
     <div class="app">
       <header class="main">
         <div class="left">
           <img class="hamburger svg" src="icons/hamburger.svg" alt="" />
-          <h2>Penny Partner</h2>
+          <div class="app-header">
+            <img class="svg" src="images/app-logo.png" alt="" />
+            <h2>Penny Partner</h2>
+          </div>
         </div>
         <img class="svg" src="icons/search.svg" alt="" />
       </header>
@@ -1077,9 +1081,9 @@
           </div>
           <img class="svg write-pen" src="icons/edit.svg" alt="" />
         </header>
-  
+
         <!-- <p>Ratings and reviews</p> -->
-  
+
         <div class="rr-body">
           <div class="rating-num-left">
             <h1>4.5</h1>
@@ -1122,10 +1126,10 @@
             </ul>
           </div>
         </div>
-  
+
         <ul class="user-feedback"></ul>
         <div class="review-back-btn">
-          <img src="icons/return.svg" alt="">
+          <img src="icons/return.svg" alt="" />
         </div>
       </div>
     </div>
@@ -1139,7 +1143,7 @@
     <script defer type="module" src="budget.js"></script>
     <script type="module" src="review.js"></script>
     <script src="animation.js"></script>
-  
+
     <script src="https://cdn.jsdelivr.net/npm/@tsparticles/confetti@3.0.3/tsparticles.confetti.bundle.min.js"></script>
   </body>
 </html>
