--- a/index.html
+++ b/index.html
@@ -1100,6 +1100,9 @@
 
       <!-- My ACCOUNT PAGE -->
       <div class="my-account-container">
+        <div class="account-back-btn">
+          <img src="icons/return.svg" alt="" />
+        </div>
         <div class="app-header">
           <img class="svg" src="images/app-logo.png" alt="" />
           <h2 style="color: #ffffff">My Account</h2>
