--- a/index.html
+++ b/index.html
@@ -976,7 +976,7 @@
               </div>
               <img class="arrow-right" src="./icons/arrowright.svg" alt="" />
             </li>
-            <li class="invite-friends">
+            <li id="invite-friends">
               <div class="left-part">
                 <img class="svg" src="icons/share.svg" alt="" />
                 <div class="info">
