--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Penny Partner</title>
     <link rel="icon" href="images/app-logo.png" type="image/png" />
-    <link rel="stylesheet" href="darkmode.css" />
-    <link rel="stylesheet" href="home.css" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="category.css" />
-    <link rel="stylesheet" href="budget.css" />
-    <link rel="stylesheet" href="review.css" />
+    <link rel="stylesheet" href="css/darkmode.css" />
+    <link rel="stylesheet" href="css/home.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/category.css" />
+    <link rel="stylesheet" href="css/budget.css" />
+    <link rel="stylesheet" href="css/review.css" />
   </head>
 
   <body>
@@ -28,7 +28,7 @@
             <header>
               <div class="month-body">
                 <div class="left-arrow"></div>
-                <h3 class="month">Aug 17, 2024</h3>
+                <h3 class="month"></h3>
                 <div class="right-arrow"></div>
               </div>
               <div class="balance-info">
