--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
               <div class="head-content">
                 <div class="month-info">
                   <div class="left-arrow"></div>
-                  <h3>August,2024</h3>
+                  <h3 class="month"></h3>
                   <div class="right-arrow"></div>
                 </div>
                 <div class="budget-info">
