--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
                 </div>
                 <div class="income-box">
                   <p>INCOME</p>
-                  <p class="green stylish">₹2,999</p>
+                  <p class="green stylish">₹0.00</p>
                 </div>
                 <div class="total-box">
                   <p>TOTAL</p>
-                  <p class="green stylish">₹5899</p>
+                  <p class="green stylish">₹0.00</p>
                 </div>
               </div>
             </header>
@@ -1111,65 +1111,110 @@
             <ul>
               <li>
                 <div class="left-part">
-                  <img class="svg" src="icons/edit.svg" alt="" />
+                  <img class="svg" src="icons/edit.svg" alt="Edit Icon" />
                   <div class="info">
-                    <p>Ganesh</p>
-                    <small>Tap to edit username</small>
+                    <p>Username</p>
+                    <small>Tap to edit your username</small>
                   </div>
                 </div>
-                <img class="arrow-right" src="icons/arrowright.svg" alt="" />
-              </li>
-              <li>
-                <div class="left-part">
-                  <img class="svg" src="icons/currency.svg" alt="" />
-                  <div class="info">
-                    <p>Currency Sign</p>
-                    <small>Indian Rupee - INR</small>
-                  </div>
-                </div>
-                <img class="arrow-right" src="icons/arrowright.svg" alt="" />
+                <img
+                  class="arrow-right"
+                  src="icons/arrowright.svg"
+                  alt="Right Arrow Icon"
+                />
               </li>
 
               <li>
                 <div class="left-part">
-                  <img class="svg" src="icons/reset.svg" alt="" />
+                  <img
+                    class="svg"
+                    src="icons/currency.svg"
+                    alt="Currency Icon"
+                  />
                   <div class="info">
-                    <p>Reset</p>
-                    <small>Reset app to initial state</small>
+                    <p>Currency</p>
+                    <small>Indian Rupee (INR)</small>
                   </div>
                 </div>
-                <img class="arrow-right" src="icons/arrowright.svg" alt="" />
+                <img
+                  class="arrow-right"
+                  src="icons/arrowright.svg"
+                  alt="Right Arrow Icon"
+                />
               </li>
+
               <li>
                 <div class="left-part">
-                  <img class="svg" src="icons/logout.svg" alt="" />
+                  <img class="svg" src="icons/reset.svg" alt="Reset Icon" />
+                  <div class="info">
+                    <p>Reset App</p>
+                    <small>Restore app to its default settings</small>
+                  </div>
+                </div>
+                <img
+                  class="arrow-right"
+                  src="icons/arrowright.svg"
+                  alt="Right Arrow Icon"
+                />
+              </li>
+
+              <li>
+                <div class="left-part">
+                  <img class="svg" src="icons/logout.svg" alt="Logout Icon" />
                   <div class="info">
                     <p>Logout</p>
-                    <small>Double click to logout</small>
+                    <small>Double-tap to sign out of your account</small>
                   </div>
                 </div>
-                <img class="arrow-right" src="icons/arrowright.svg" alt="" />
-              </li>
-              <li>
-                <div class="left-part">
-                  <img class="svg" src="icons/delete.svg" alt="" />
-                  <div class="info">
-                    <p>Delete</p>
-                    <small>Delete my account permenently</small>
-                  </div>
-                </div>
-                <img class="arrow-right" src="icons/arrowright.svg" alt="" />
+                <img
+                  class="arrow-right"
+                  src="icons/arrowright.svg"
+                  alt="Right Arrow Icon"
+                />
               </li>
 
               <li>
                 <div class="left-part">
-                  <img class="svg" src="icons/privacy.svg" alt="" />
+                  <img class="svg" src="icons/delete.svg" alt="Delete Icon" />
                   <div class="info">
-                    <p>Privacy Policy</p>
-                    <small>Know our privacy policy</small>
+                    <p>Delete Account</p>
+                    <small>Permanently remove your account</small>
                   </div>
                 </div>
-                <img class="arrow-right" src="icons/arrowright.svg" alt="" />
+                <img
+                  class="arrow-right"
+                  src="icons/arrowright.svg"
+                  alt="Right Arrow Icon"
+                />
+              </li>
+
+              <li>
+                <div class="left-part">
+                  <img class="svg" src="icons/privacy.svg" alt="Privacy Icon" />
+                  <div class="info">
+                    <p>Privacy Policy</p>
+                    <small>Review our privacy practices</small>
+                  </div>
+                </div>
+                <img
+                  class="arrow-right"
+                  src="icons/arrowright.svg"
+                  alt="Right Arrow Icon"
+                />
+              </li>
+              <li>
+                <div class="left-part">
+                  <img class="svg" src="icons/csv.svg" alt="Export Icon" />
+                  <div class="info">
+                    <p>Export Records</p>
+                    <small>Download records as a CSV file</small>
+                  </div>
+                </div>
+                <img
+                  class="arrow-right"
+                  src="icons/arrowright.svg"
+                  alt="Right Arrow Icon"
+                />
               </li>
             </ul>
           </div>
