--- a/index.html
+++ b/index.html
@@ -1104,9 +1104,6 @@
           <h2 style="color: #ffffff">My Account</h2>
         </div>
         <div class="account-container-body">
-          <div class="account-page-profile">
-            <img src="images/men.png" alt="" />
-          </div>
           <div class="settings">
             <ul>
               <li>
@@ -1132,7 +1129,7 @@
                     alt="Currency Icon"
                   />
                   <div class="info">
-                    <p>Currency</p>
+                    <p>Currency Format</p>
                     <small>Indian Rupee (INR)</small>
                   </div>
                 </div>
@@ -1143,6 +1140,22 @@
                 />
               </li>
 
+              
+
+              <li>
+                <div class="left-part">
+                  <img class="svg" src="icons/csv.svg" alt="Export Icon" />
+                  <div class="info">
+                    <p>Export Records</p>
+                    <small>Download records as a CSV file</small>
+                  </div>
+                </div>
+                <img
+                  class="arrow-right"
+                  src="icons/arrowright.svg"
+                  alt="Right Arrow Icon"
+                />
+              </li>
               <li>
                 <div class="left-part">
                   <img class="svg" src="icons/reset.svg" alt="Reset Icon" />
@@ -1157,7 +1170,34 @@
                   alt="Right Arrow Icon"
                 />
               </li>
-
+              <li>
+                <div class="left-part">
+                  <img class="svg" src="icons/message.svg" alt="Contact Icon" />
+                  <div class="info">
+                    <p>Contact Support</p>
+                    <small>Get in touch or send a message</small>
+                  </div>
+                </div>
+                <img
+                  class="arrow-right"
+                  src="icons/arrowright.svg"
+                  alt="Right Arrow Icon"
+                />
+              </li>
+              <li>
+                <div class="left-part">
+                  <img class="svg" src="icons/privacy.svg" alt="Privacy Icon" />
+                  <div class="info">
+                    <p>Privacy Policy</p>
+                    <small>Review our privacy practices</small>
+                  </div>
+                </div>
+                <img
+                  class="arrow-right"
+                  src="icons/arrowright.svg"
+                  alt="Right Arrow Icon"
+                />
+              </li>
               <li>
                 <div class="left-part">
                   <img class="svg" src="icons/logout.svg" alt="Logout Icon" />
@@ -1179,35 +1219,6 @@
                   <div class="info">
                     <p>Delete Account</p>
                     <small>Permanently remove your account</small>
-                  </div>
-                </div>
-                <img
-                  class="arrow-right"
-                  src="icons/arrowright.svg"
-                  alt="Right Arrow Icon"
-                />
-              </li>
-
-              <li>
-                <div class="left-part">
-                  <img class="svg" src="icons/privacy.svg" alt="Privacy Icon" />
-                  <div class="info">
-                    <p>Privacy Policy</p>
-                    <small>Review our privacy practices</small>
-                  </div>
-                </div>
-                <img
-                  class="arrow-right"
-                  src="icons/arrowright.svg"
-                  alt="Right Arrow Icon"
-                />
-              </li>
-              <li>
-                <div class="left-part">
-                  <img class="svg" src="icons/csv.svg" alt="Export Icon" />
-                  <div class="info">
-                    <p>Export Records</p>
-                    <small>Download records as a CSV file</small>
                   </div>
                 </div>
                 <img
