--- a/index.html
+++ b/index.html
@@ -1233,15 +1233,15 @@
       </div>
     </div>
 
-    <script type="module" src="home.js"></script>
-    <script async type="module" src="script.js"></script>
+    <script type="module" src="JavaScript/home.js"></script>
+    <script async type="module" src="JavaScript/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script type="module" src="analysis.js"></script>
-    <script defer type="module" src="functions.js"></script>
-    <script defer type="module" src="category.js"></script>
-    <script defer type="module" src="budget.js"></script>
-    <script type="module" src="review.js"></script>
-    <script src="animation.js"></script>
+    <script type="module" src="JavaScript/analysis.js"></script>
+    <script defer type="module" src="JavaScript/functions.js"></script>
+    <script defer type="module" src="JavaScript/category.js"></script>
+    <script defer type="module" src="JavaScript/budget.js"></script>
+    <script type="module" src="JavaScript/review.js"></script>
+    <script src="JavaScript/animation.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/@tsparticles/confetti@3.0.3/tsparticles.confetti.bundle.min.js"></script>
   </body>
