--- a/index.html
+++ b/index.html
@@ -1232,8 +1232,8 @@
 
     <script type="module" src="JavaScript/home.js"></script>
     <script async type="module" src="JavaScript/script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script type="module" src="JavaScript/analysis.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script type="module" src="JavaScript/analysis.js"></script> -->
     <script defer type="module" src="JavaScript/functions.js"></script>
     <script defer type="module" src="JavaScript/category.js"></script>
     <script defer type="module" src="JavaScript/budget.js"></script>
