--- a/auth.html
+++ b/auth.html
@@ -23,7 +23,7 @@
       -webkit-user-drag: none;
     }
     :root {
-      --primary-color: linear-gradient(to left,#2972FF, #24F7FF);
+      --primary-color: linear-gradient(to left, #2972ff, #24f7ff);
     }
     .container {
       width: 100%;
@@ -210,17 +210,16 @@
         transform: translateX(-200px);
       }
     }
-    .logo{
-      width: 70px;
+    .logo {
+      width: 80px;
       background-color: #ffffff;
       border-radius: 50%;
       padding: 10px;
-     
     }
   </style>
   <body>
     <div class="container">
-      <img class="logo" src="images/app-logo.png" alt="">
+      <img class="logo" src="images/app-logo.png" alt="" />
       <h3 class="title">Welcome Back</h3>
       <form action="">
         <div class="form-switch">
@@ -232,14 +231,14 @@
           <section class="active">
             <div class="form-group">
               <img src="icons/message.svg" alt="" />
-              <input type="text" placeholder="Email your email" />
+              <input type="text" placeholder="Enter your email" />
             </div>
             <div class="form-group">
               <img src="icons/password.svg" alt="" />
               <input
                 id="password"
                 type="text"
-                placeholder="Email your password"
+                placeholder="Enter your password"
               />
               <small class="forgot-pass">Forgot password</small>
             </div>
@@ -258,16 +257,16 @@
           </section>
           <section class="section-2">
             <div class="form-group">
+              <img src="icons/user.svg" alt="" />
+              <input type="text" placeholder="Enter your name" />
+            </div>
+            <div class="form-group">
               <img src="icons/message.svg" alt="" />
-              <input type="text" placeholder="Email your email" />
+              <input type="text" placeholder="Enter your email" />
             </div>
             <div class="form-group">
               <img src="icons/password.svg" alt="" />
-              <input type="text" placeholder="Email your password" />
-            </div>
-            <div class="form-group">
-              <img src="icons/password.svg" alt="" />
-              <input type="text" placeholder="Confirm your password" />
+              <input type="text" placeholder="Enter your password" />
             </div>
 
             <button>GET STARTED</button>
